--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -1,4 +1,6 @@
 body {
+    margin: 0;
+    padding: 0;
     font-family: Helvetica;
     text-align: center;
 }
@@ -13,15 +15,11 @@ h1 {
     color: white;
 }
 
-li {
-    list-style: none;
-}
 
-li a {
+a {
     font-family: Helvetica;
     font-size: 18px;
     color: white;
-    line-height: 1.8;
 }
 
 h2 {
@@ -45,17 +43,12 @@ p {
     color: white;
 }
 
-/*-- Footer need fix... 
 .footer {
-    float: left;
-}
-.footer p {
-    display: inline-block;
+    text-align: left;
     font-size: 11px;
     color: white;
     background-color: dimgray;
 }
-.footer li {
-    display: inline-block;
-}
- --*/
+
+
+ 
